--- a/app/assets/stylesheets/pages/_vendors-show.scss
+++ b/app/assets/stylesheets/pages/_vendors-show.scss
@@ -4,6 +4,8 @@
   background-color: white;
   box-shadow: 0 0 10px 0px #ffdadaab;
   padding: 20px;
+  //Added for showing the alert in the top of page
+  position: relative;
 }
 
 .side-fav-content{
@@ -48,5 +50,11 @@
     color: $candy-pink;
     margin: 0;
   }
-  
+
+.valert-position {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
 }
