--- a/app/views/shared/_dash-vendor-sidebar.html.erb
+++ b/app/views/shared/_dash-vendor-sidebar.html.erb
@@ -8,8 +8,9 @@
     <%= image_tag @vendor.photo, class: "avatar-prof" %>
   </div>
   <div class="dash-menu">
+  <%= link_to "My Dashboard", vendor_dashboard_path %>
   <%= link_to "My Products", vendor_products_path %>
-  <%= link_to "My Inbox", "#" %>
+  <%= link_to "My Inbox", vendor_inboxes_path %>
   <%= link_to "Edit my Profile", edit_vendor_registration_path %>
   </div>
 </div>
