--- a/app/views/shared/_dash-user-sidebar.html.erb
+++ b/app/views/shared/_dash-user-sidebar.html.erb
@@ -9,7 +9,7 @@
   </div>
   <div class="dash-menu">
   <%= link_to "Guest List", user_guests_path %>
-  <%= link_to "My Favorites", user_favorite_vendors_path %>
+  <%= link_to "My Inbox", user_inboxes_path %>
   <%= link_to "Edit my Profile", edit_user_registration_path %>
   </div>
 </div>
