--- a/app/views/user/inboxes/show.html.erb
+++ b/app/views/user/inboxes/show.html.erb
@@ -1,22 +1,32 @@
-<h1>#<%= @inbox.name %></h1>
-<div id="messages" data-inbox-id="<%= @inbox.id %>">
-  <% @inbox.messages.each do |message| %>
-    <div class="message-container" id="message-<%= message.id %>">
-      <i class="author">
-        <span><%= message.sender.name %></span>
-        <small><%= message.created_at.strftime("%a %b %e at %l:%M%p") %></small>
-      </i>
-      <p><%= message.content %></p>
-      <% if message.photo.present? %>
-        <%= cl_image_tag message.photo.key, height: 300, wdith: 'auto', crop: :fill %>
-      <%end%>
+<%= render 'shared/dash-user-sidebar' %>
+
+<div class="dash-main">
+  <div class="chatroom-wrap">
+    <h1>Chat with <%= @inbox.name %></h1>
+    <div id="messages" class="message-wrap" data-inbox-id="<%= @inbox.id %>">
+      <% @inbox.messages.each do |message| %>
+        <div class="message-container" id="message-<%= message.id %>">
+          <i class="author">
+            <span><%= message.sender.name %></span>
+            <small><%= message.created_at.strftime("%a %b %e at %l:%M%p") %></small>
+          </i>
+          <p><%= message.content %></p>
+          <% if message.photo.present? %>
+            <%= cl_image_tag message.photo.key, height: 300, wdith: 'auto', crop: :fill %>
+          <%end%>
+        </div>
+      <% end %>
     </div>
-  <% end %>
-</div>
-<%= simple_form_for [:user, @inbox, @message ],remote:true, authenticity_token: true do |f| %>
-  <%= f.input :content, label: false, placeholder: "Message ##{@inbox.name}" %>
-  <%= f.input :photo, as: :file %>
-  <div class="form-actions form-btn-wrap d-flex justify-content-around">
-    <%= f.submit "submit", class: 'sha-btn'%>
+    <%= simple_form_for [:user, @inbox, @message ],remote:true, authenticity_token: true do |f| %>
+      <div class="row senddiv align-items-center">
+        <div class="col-xs-12 col-md-9">
+          <%= f.input :photo, label: false, as: :file %>
+          <%= f.input :content, label: false, placeholder: "Send #{@inbox.name.capitalize} a message" %>
+        </div>
+        <div class="class-xs-12 col-md-3 float-right">
+          <%= f.submit "Send", class: 'sha-btn btn-block'%>
+        </div>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
