message.html changed

--- a/app/views/user/messages/_message.html.erb
+++ b/app/views/user/messages/_message.html.erb
@@ -5,7 +5,7 @@
   </i>
   <p><%= message.content %></p>
   <% if message.photo.present? %>
-    <%= cl_image_tag photo.key, height: 300, wdith: 'auto', crop: :fill %>
+    <%= cl_image_tag message.photo.key, height: 300, wdith: 'auto', crop: :fill %>
   <% else %>
   <% end %>
 </div>
