Stipe input card

--- a/app/views/shared/_invoice_modal.html.erb
+++ b/app/views/shared/_invoice_modal.html.erb
@@ -21,6 +21,7 @@
       <div class="modal-footer">
         <button  data-action="click->invmodal#close" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button data-action="click->invmodal#payOrder" type="button" class="btn btn-warning">Confirm order</button>
+        <!-- <button data-action="click->invmodal#purchase" type="button" class="btn btn-warning">Purchase</button> -->
       </div>
     </div>
   </div>
