--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -7,8 +7,8 @@
  h1 {
    font-weight: 700;
    font-size: 90px;
-   color: #e4314f;
-   text-shadow: 0px 0px 8px rgba(110, 192, 255, 0.219);
+   color: #ffffff;
+   text-shadow: 0px 0px 8px rgba(255, 110, 110, 0.219);
  }
 
  p{
