--- a/app/views/user/pages/dashboard.html.erb
+++ b/app/views/user/pages/dashboard.html.erb
@@ -88,7 +88,7 @@
         <% end %>
       </div>
         <div class="d-flex justify-content-around">
-          <button class="sha-btn-outline-md m-4"><%= link_to "Add Guests", new_user_guest_path %></button>
+          <button class="sha-btn-outline-md m-4"><%= link_to "View my Guest list", user_guests_path %></button>
         </div>
     </div>
   </div>
