invoice show should work now

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -29,11 +29,10 @@
 }
 
 .avatar-white {
-  width: 40px;
-  height: 40px;
-  padding: 2px;
+  height: 52px;
+  padding: 2px 8px;
   object-fit: cover;
-  border-radius: 50%;
+  border-radius: 50px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   background-color: white;
   border: rgba(255, 255, 255, 0.349) 3px solid;
