--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
   <%= link_to "/" do %>
   <div class="avatar-white">
   
-    <%= image_tag "ringlogo1.svg" %>
+    <%= image_tag "ringlogo1.png", class:"footerlogo" %>
   
   </div>
   <% end %>
