--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,8 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon" <% if controller.controller_name == "pages" && controller.action_name == "home" %>id="homenav"<%end%>>
   <div class="content-wrap d-flex justify-content-between">
   <%= link_to "/", class: "navbar-brand" do %>
-    <%= image_tag "ringlogo1.svg" %>
-    <% end %>
+    <%= image_tag "ringlogo1.png" %>
+  <% end %>
 
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
