--- a/app/views/user/favorite_vendors/index.html.erb
+++ b/app/views/user/favorite_vendors/index.html.erb
@@ -15,8 +15,7 @@
       </div>
       <div class="fav-options">
       <%= link_to "Chat Now", user_inbox_path(favorite.inbox.id) %>
-      <%# <a href="#" class="sha-mustard-btn">Chat now</a> %>
-      <% if favorite.vendor.quotes.first.booked == 0 %>
+      <% if favorite.quote.booked == 0 %>
         <a href="#" class="btn btn-secondary" >No invoice</a>
       <% elsif favorite.quote.booked == 1 %>
         <button href="#"
@@ -27,7 +26,7 @@
                 data-total_price="<%= favorite.quote.total_price %>"
                 data-quote_id="<%= favorite.quote.id %>">See invoice!</button>
       <% else %>
-        <a href="#" class="btn btn-success" >Payed</a>
+        <a href="#" class="btn btn-success" >Paid</a>
       <% end %>
 
 
@@ -38,7 +37,8 @@
         data: { confirm: "Are you sure?" } %>
       </div>
     </div>
+    <%= render 'shared/invoice_modal' %>
   <% end %>
-  <%= render 'shared/invoice_modal' %>
+  
   </div>
 </div>
