--- a/app/views/user/pages/dashboard.html.erb
+++ b/app/views/user/pages/dashboard.html.erb
@@ -3,26 +3,29 @@
 <div class="dash-main">
   <h1 class='text-center m-3'>My Dashboard</h1>
   <div class="row">
+
+
+
     <div class="col-xs-12 col-md-3">
-    <div class="my-accountinfo vdash-divbackground">
-      <h2>Account Info</h2>
-      <hr>
-      <div class="d-flex justify-content-around">
-        <%= cl_image_tag @user.photo.key, class: "avatar-prof2"%>
+      <div class="my-accountinfo vdash-divbackground">
+        <h2>Account Info</h2>
+        <hr>
+        <div class="d-flex justify-content-around">
+          <%= cl_image_tag @user.photo.key, class: "avatar-prof2"%>
+        </div>
+        <p class="vacctinfo-title"><strong>Name</strong></p>
+        <p><%=@user.first_name.capitalize%> <%=@user.last_name.capitalize%></p>
+        <p class="vacctinfo-title"><strong>Email</strong></p>
+        <p><%=@user.email%></p>
+        <div class="d-flex justify-content-around">
+          <button class="sha-mustard-btn sha-btn-md"><%= link_to "Edit my Profile", edit_user_registration_path%></button>
+        </div>
       </div>
-      <p class="vacctinfo-title"><strong>Name</strong></p>
-      <p><%=@user.first_name.capitalize%> <%=@user.last_name.capitalize%></p>
-      <p class="vacctinfo-title"><strong>Email</strong></p>
-      <p><%=@user.email%></p>
-      <div class="d-flex justify-content-around">
-      <button class="sha-mustard-btn sha-btn-md"><%= link_to "Edit my Profile", edit_user_registration_path%></button>
     </div>
-    </div>
-  </div>
 
 <%# My Favorites %>
   <div class="col-xs-12 col-md-6">
-    <div class="client-messages vdash-divbackground" data-controller="vendor-modal">
+    <div class="client-messages vdash-divbackground" data-controller="invoice-modal">
       <h2>My Favorite Vendors</h2>
       <hr>
       <div class="row align-items-center">
@@ -38,19 +41,16 @@
           </div>
 
           <div class="col-xs-12 col-md-5">
-
             <div class="chat-options float-right">
               <button class="sha-green-btn sha-btn-md"><%= link_to "Chat Now", user_inbox_path(favorite.inbox.id) %></button>
               <% if favorite.inbox.messages.blank? %>
-              
                 <%= link_to "Remove",
                   user_favorite_vendor_path(favorite),
                   class: "sha-btn-outline sha-btn-md",
                   method: :delete,
                   data: { confirm: "Are you sure?" } %>
-              <%# elsif favorite.quote.booked == 0 %>
-                <%# <button class="sha-grey-btn sha-btn-md" disabled>No Invoice</button> %>
-                
+              <% elsif favorite.quote.booked == 0 %>
+                <button class="sha-grey-btn sha-btn-md" disabled>No Invoice</button>
               <% elsif favorite.quote.booked == 1 %>
                 <button href="#"
                         class="sha-mustard-btn sha-btn-md"
@@ -70,7 +70,7 @@
       <div class="d-flex justify-content-around">
         <button class="sha-btn-outline-md m-4"><%= link_to "Go to my Inbox", user_inboxes_path %></button>
       </div>
-      <%= render 'shared/vendor_modal' %>
+      <%= render 'shared/invoice_modal' %>
     </div>
   </div>
 <%# End my favorites %>
