--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <title><%= meta_title %></title>
     <meta name="description" content="<%= meta_description %>">
     <meta property="og:title" content="<%= meta_title %>" />
