--- a/app/assets/stylesheets/pages/_inbox.scss
+++ b/app/assets/stylesheets/pages/_inbox.scss
@@ -1,16 +1,24 @@
 .inbox-wrap{
   margin: 20px auto;
-  width: 70%;
+  width: 80%;
   background-color: white;
   box-shadow: 0 0 10px 0px #ffdadaab;
   padding: 20px;
   text-align: center;
 }
 
+.invoice-wrap{
+  margin: 20px auto;
+  width: 50%;
+  background-color: white;
+  box-shadow: 0 0 10px 0px #ffdadaab;
+  padding: 40px 50px;
+}
+
 .chatroom-wrap{
   margin: 0 auto;
   margin-top: 20px;
-  width: 70%;
+  width: 50%;
   background-color: white;
   box-shadow: 0 0 10px 0px #ffdadaab;
   padding: 20px 50px;
