--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -4,7 +4,7 @@
       <%= text_field_tag :query,
           params[:query],
           class: "search__input",
-          placeholder: "Find a vendor"
+          placeholder: "Seoul, wedding dresses etc... "
         %>
         <%= f.button :submit, 'Search', class: "search-btn", wrapper: :inline_form, html: { class: 'form-inline' }%>
     </div>
