--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -3,12 +3,14 @@ button{
 }
 
 .search-btn {
+  margin-bottom: 10px;
   color: #e4314f;
   font-size: 24px;
   line-height: 24px;
-  padding: 12px 24px;
+  padding: 14px 24px;
   transition: transform 250ms ease-in-out;
-  border: none;
+  border: 1.5px solid #e4314f;
+  border-radius: 50px;
   background-color: none;
   a{
     text-decoration: none;
