--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -73,9 +73,8 @@
     &:focus {
         padding: 12px 20px;
         outline: 0;
-        border: 1px solid transparent;
-        border-bottom: 1px solid #575756;
-        border-radius: 0;
+        border: 1px solid #9b9b9b;
+        border-radius: 50px;
         background-position: 98% center;
     }
   }
@@ -99,12 +98,14 @@
 }
 
 .search-btn2 {
+  margin-left: 10px;
   color: #e4314f;
+  border: 1px solid #e4314f;
   font-size: 24px;
   line-height: 24px;
   padding: 12px 24px;
   transition: transform 250ms ease-in-out;
-  border: none;
+  border-radius:50px;
   background-color: rgba(255, 166, 0, 0);
   &:hover, &:focus{
     background-color: #e4314f;
