--- a/app/views/user/pages/show_invoice.html.erb
+++ b/app/views/user/pages/show_invoice.html.erb
@@ -1,24 +1,39 @@
-<div>
-  <h1>Please check details and proceed with the payment.</h1>
-  <h4>Quote Number: <%= @purchase_data.id %></h4>
-  <h4>Date:</h4>
-  <p><%= @purchase_data.date %></p>
+<%= render 'shared/dash-user-sidebar' %>
+<div class="dash-main">
+<div class="invoice-wrap">
+  <h2>Please check details and proceed with the payment.</h2>
+  <br>
+  <h4>Vendor Name: <%= Vendor.find(@purchase_data.vendor_id).name %></h4>
+  <br>
+  <h5 style="border-bottom: 1px solid black">Invoice #: <%= @purchase_data.id %></h5>
+  <br>
+  <h5 style="border-bottom: 1px solid black">Service Date</h5>
+  <p><%= @purchase_data.date.strftime("%a %b %e %Y") %></p>
   <h5 style="border-bottom: 1px solid black">List of services:</h5>
   <p><%= @purchase_data.list_of_services %></p>
   <div style="border-bottom: 1px solid black">
   <h5>Total price:</h5>
   </div>
   <p><%= @purchase_data.total_price %>.00 USD</p>
+  
+  
+  <div class="d-flex justify-content-around">
+    <button id="pay" class="sha-btn">Pay</button>
+  </div>
 </div>
-<button id="pay" class="btn btn-primary">Pay</button>
-        <script src="https://js.stripe.com/v3/"></script>
-              <script>
-                const paymentButton = document.getElementById('pay');
-                paymentButton.addEventListener('click', () => {
-                  const stripe = Stripe('<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>');
-                  stripe.redirectToCheckout({
-                    sessionId: '<%= @purchase_data.checkout_session_id %>'
-                  });
-                });
-              </script>
+</div>
+
+
+
+
+<script src="https://js.stripe.com/v3/"></script>
+      <script>
+        const paymentButton = document.getElementById('pay');
+        paymentButton.addEventListener('click', () => {
+          const stripe = Stripe('<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>');
+          stripe.redirectToCheckout({
+            sessionId: '<%= @purchase_data.checkout_session_id %>'
+          });
+        });
+      </script>
 
