user dash, navbar, and glider arrows fixed

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,7 +20,7 @@
           <%= image_tag current_user.photo, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Dashbaord", user_dashboard_path, class: "dropdown-item" %>
-            <%= link_to "Inbox", "#", class: "dropdown-item" %>
+            <%= link_to "Inbox", user_inboxes_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
@@ -37,7 +37,7 @@
           <%= image_tag current_vendor.photo, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Dashbaord", vendor_dashboard_path, class: "dropdown-item" %>
-            <%= link_to "Inbox", "#", class: "dropdown-item" %>
+            <%= link_to "Inbox", vendor_inboxes_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
